--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>PeacockTV Premium Review: Features, Pricing & Full Benefits</title>
     <meta name="description" content="Explore our detailed PeacockTV Premium review including features, pricing, full benefits, and Peacock TV Account Login guide for seamless streaming.">
     <meta name="keywords" content="PeacockTV Premium, Peacock TV Account Login, Peacock TV features, Peacock TV pricing, Peacock TV benefits, Peacock streaming, Peacock account, Peacock login">
+   <meta name="msvalidate.01" content="6CB183CD243478EF3D1F74B5908B4A9D" />
+    <meta name="google-site-verification" content="DJlIPtqUWWR95zwRDwzIsLgDGzUE_bzx4cnhWTAQvGc" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +59,9 @@
             background-color: #fff;
             border-radius: 8px;
         }
-        h1, h2, h3 {
+        h1{
+            color:white;
+        } h2, h3 {
             color: #0d47a1;
         }
         p {
